# B4_task_2026

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Homework1.out  Homework2  Homework2.cpp  Homework3  Homework3.cpp  Makefile  P1  P2  P2.cpp  P3.cpp  README.md  Untitled-1.sh  a.out  check.cpp  cmake_install.cmake  kadai1  kadai1.c  kadai2  kadai2.cpp  kadai3  kadai3.cpp  kadai_1  kadai_2  kadai_2.c  kadai_3.cpp  main  output.csv  result1.csv  result2.csv  課題1.txt  課題2  課題2.txt  課題3  課題3.txt
kadai2/: kadai2.cpp
kadai3/: kadai3.cpp
validation/: compare_csv.py  output.csv
